<resources>
    <string name="app_name">Windows Controller</string>
    <string name="failedConnectionText">Connection Failed</string>
    <string name="ConnectedToText">Connected to</string>
    <string name="scanningText">Scanning</string>
    <string name="ipPlaceholderText">Enter IP Address</string>
    <string name="rescanText">Rescan Network</string>
    <string name="continueScanText">Continue Scanning</string>
    <string name="upArrow">^\n|</string>
    <string name="leftArrow"><![CDATA[<–]]></string>
    <string name="rightArrow"><![CDATA[–>]]></string>
    <string name="downArrow">|\nv</string>
    <string name="initializing">Initializing</string>
    <string name="abc">ABC</string>
    <string name="initialHiddenBufferText">////</string>
    <string name="ctrl">CTRL</string>
    <string name="alt">ALT</string>
    <string name="shift">SHIFT</string>
    <string name="windows">WIN</string>
    <string name="pin">PIN</string>
    <string name="copy">copy (win)</string>
    <string name="paste">paste</string>
</resources>
