<?xml version="1.0" encoding="utf-8"?>

<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/frameLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <android.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.ben.mousecontrol.MainActivity"
        android:orientation="vertical"
        android:focusableInTouchMode="true"
        android:focusable="true"
        android:clickable="true">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:minHeight="?attr/actionBarSize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:titleTextColor="@android:color/white"
            android:background="?attr/colorPrimaryDark">
        </android.support.v7.widget.Toolbar>

        <android.widget.LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <android.widget.LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight=".1"
                android:layout_gravity="fill">

                <TextView
                    android:id="@+id/comboTextBox"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="ASDFGJKL"
                    android:background="#FFFFFFFF"
                    android:visibility="invisible"
                    android:textSize="40sp"/>

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="fill"/>

            </android.widget.LinearLayout>

            <com.ben.mousecontrol.HiddenBufferEditText
                android:id="@+id/hiddenKeyBuffer"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:ems="10"
                android:imeOptions="actionNext"
                android:text="@string/initialHiddenBufferText"
                android:hint=""
                android:inputType="textNoSuggestions"
                tools:text="@string/initialHiddenBufferText"/>

            <android.widget.GridLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:columnCount="3"
                android:rowCount="4">

                <Button
                    android:id="@+id/leftUpBtn"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="fill"
                    android:focusableInTouchMode="false"
                    android:focusable="false"
                    android:clickable="true"/>

                <Button
                    android:id="@+id/upBtn"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="fill"
                    android:text="@string/upArrow"
                    tools:text="^\n|"
                    android:focusableInTouchMode="false"
                    android:focusable="false"
                    android:clickable="true"/>

                <Button
                    android:id="@+id/rightUpBtn"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="fill"
                    android:focusableInTouchMode="false"
                    android:focusable="false"
                    android:clickable="true"/>

                <Button
                    android:id="@+id/leftBtn"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="fill"
                    android:text="@string/leftArrow"
                    tools:text="&lt;&#8211;"
                    android:focusableInTouchMode="false"
                    android:focusable="false"
                    android:clickable="true"/>

                <Button
                    android:id="@+id/arrowToggleBtn"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="fill"
                    android:focusableInTouchMode="false"
                    android:focusable="false"
                    android:clickable="true"/>

                <Button
                    android:id="@+id/rightBtn"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="fill"
                    android:text="@string/rightArrow"
                    tools:text="&#8211;&gt;"
                    android:focusableInTouchMode="false"
                    android:focusable="false"
                    android:clickable="true"/>

                <Button
                    android:id="@+id/leftDownBtn"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="fill"
                    android:focusableInTouchMode="false"
                    android:focusable="false"
                    android:clickable="true"/>

                <Button
                    android:id="@+id/downBtn"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="fill"
                    android:text="@string/downArrow"
                    tools:text="|\nv"
                    android:focusableInTouchMode="false"
                    android:focusable="false"
                    android:clickable="true" />

                <Button
                    android:id="@+id/rightDownBtn"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="fill"
                    android:focusableInTouchMode="false"
                    android:focusable="false"
                    android:clickable="true"/>

            </android.widget.GridLayout>

        </android.widget.LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".1"
            android:layout_gravity="fill"/>

        <android.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:id="@+id/leftClickBtn"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="70dp"
                android:layout_gravity="fill"
                android:focusable="false"/>

            <Button
                android:id="@+id/midClickBtn"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="fill"
                android:focusable="false"/>

            <Button
                android:id="@+id/rightClickBtn"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="70dp"
                android:layout_gravity="fill"
                android:focusable="false"/>

            <Button
                android:id="@+id/keyboardButton"
                android:layout_width="55dp"
                android:layout_height="70dp"
                android:text="@string/abc"
                android:onClick="abcPressed"/>

        </android.widget.LinearLayout>
    </android.widget.LinearLayout>

    <android.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical">

        <android.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom">

            <Button
                android:id="@+id/comboBtn"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="combo" />

        </android.widget.LinearLayout>

        <android.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom">

            <Button
                android:id="@+id/ctrlBtn"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/ctrl" />

            <Button
                android:id="@+id/altBtn"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/alt" />

            <Button
                android:id="@+id/shiftBtn"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/shift" />

            <Button
                android:id="@+id/winBtn"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/windows" />

            <Button
                android:id="@+id/cpyBtn"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/copy" />

            <Button
                android:id="@+id/pasteBtn"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/paste" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight=".1"
                android:layout_gravity="center_vertical"/>

            <Button
                android:id="@+id/pinBtn"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/pin"/>
        </android.widget.LinearLayout>
    </android.widget.LinearLayout>

    <ImageView
        android:id="@+id/cursor"
        android:layout_width="15dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:background="@drawable/cursor"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="7.5dp"/>
</merge>